packages/frontend/src/Emoji.css
.emoji {
  display: block;
  position: absolute;
  top: 0;
  animation: rain linear infinite;
  transform: translate3d(0, 0, 0);
  animation-duration: 4s;
}

@keyframes rain {
  from {
    top: 0;
  }
  to {
    top: 90%;
  }
}

